--- a/app/src/main/res/layout/item_player_stat.xml
+++ b/app/src/main/res/layout/item_player_stat.xml
@@ -1,72 +1,91 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp">
 
+    <!-- Player Name: More space for longer names -->
     <TextView
         android:id="@+id/playerNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Player Name" />
+        android:layout_weight="2.5"
+        android:layout_marginStart="0dp"
 
+        android:text="Player Name"
+        android:ellipsize="end"
+        android:singleLine="false"
+        android:layout_marginEnd="0.5dp"/>
+
+    <!-- Position: Slightly less space -->
     <TextView
         android:id="@+id/positionTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Position" />
+        android:layout_weight="2.5"
+        android:text="Position"
+        android:ellipsize="end"
+        android:singleLine="false"
+        android:layout_marginEnd="0.5dp"/>
 
+    <!-- Team Name: Similar space to Position -->
     <TextView
         android:id="@+id/teamNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Team Name" />
+        android:layout_weight="3"
+        android:text="Team Name"
+        android:ellipsize="end"
+        android:singleLine="false"
+        android:layout_marginEnd="0.5dp"/>
 
+    <!-- Integer stats: Compact space -->
     <TextView
         android:id="@+id/mpTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
         android:id="@+id/winsTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
         android:id="@+id/drawsTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
         android:id="@+id/lossesTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
         android:id="@+id/gfTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
         android:id="@+id/gaTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.75"
+        android:gravity="center"
         android:text="0" />
-
 
 </LinearLayout>
