--- a/app/src/main/res/drawable/baseline_add_circle_24.xml
+++ b/app/src/main/res/drawable/baseline_add_circle_24.xml
@@ -1,5 +1,17 @@
-<vector android:height="24dp" android:tint="#0A8730"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+<vector
+    android:height="24dp"
+    android:width="24dp"
+    android:viewportHeight="24"
+    android:viewportWidth="24"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Circle Path (background) -->
+    <path
+        android:fillColor="#0000FF"
+    android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z"/>
+
+    <!-- Plus Sign Path -->
+    <path
+        android:fillColor="#000000"
+    android:pathData="M17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
 </vector>
