--- a/app/src/main/res/layout/item_standing_header.xml
+++ b/app/src/main/res/layout/item_standing_header.xml
@@ -9,16 +9,17 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Position"
+        android:layout_weight="0.7"
+        android:text="Pos"
         android:textStyle="bold"
         android:gravity="center"
-        android:padding="4dp" />
+        android:padding="4dp"
+        android:singleLine="true"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="2.5"
         android:text="Team Name"
         android:textStyle="bold"
         android:gravity="center"
@@ -27,7 +28,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="MP"
         android:textStyle="bold"
         android:gravity="center"
@@ -36,7 +37,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="W"
         android:textStyle="bold"
         android:gravity="center"
@@ -45,7 +46,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="D"
         android:textStyle="bold"
         android:gravity="center"
@@ -54,7 +55,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="L"
         android:textStyle="bold"
         android:gravity="center"
@@ -63,7 +64,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="GF"
         android:textStyle="bold"
         android:gravity="center"
@@ -72,7 +73,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="GA"
         android:textStyle="bold"
         android:gravity="center"
@@ -81,7 +82,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="GD"
         android:textStyle="bold"
         android:gravity="center"
@@ -90,7 +91,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.65"
         android:text="Pts"
         android:textStyle="bold"
         android:gravity="center"
