--- a/app/src/main/res/layout/fragment_add_player_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_player_dialog.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layoutDirection="locale">
 
     <EditText
         android:id="@+id/editTextPlayerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Enter player name"
-        android:inputType="text"
+        android:inputType="textMultiLine|textNoSuggestions"
         android:minHeight="48dp"
         tools:ignore="Suspicious0dp" />
 
@@ -20,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Enter player position"
-        android:inputType="text"
+        android:inputType="textMultiLine|textNoSuggestions"
         android:minHeight="48dp"
         tools:ignore="Suspicious0dp" />
 
